<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sms"

    android:orientation="vertical">

<!--    <ImageView-->
<!--        android:id="@+id/btnBack"-->
<!--        android:layout_width="45dp"-->
<!--        android:layout_height="45dp"-->
<!--        android:clickable="true"-->
<!--        android:src="@drawable/back"-->
<!--        tools:ignore="SpeakableTextPresentCheck" />-->

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/Sms_Tilte"
            android:textColor="@color/black"
            android:textSize="32dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/Sms_text"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/txtNumberUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="0147852369"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold" />


        <com.chaos.view.PinView
            android:id="@+id/pinView"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:cursorVisible="true"
            android:elevation="5dp"
            android:inputType="number"
            android:padding="18dp"
            app:cursorWidth="0dp"
            app:hideLineWhenFilled="true"
            app:itemCount="6"
            app:itemHeight="48dp"
            app:itemRadius="8dp"
            app:itemSpacing="8dp"
            app:itemWidth="48dp"
            app:lineWidth="2dp"
            app:viewType="rectangle"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txtResendSms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/Resend_sms"
            android:textSize="18dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:elevation="8dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/btnConfirm" />


    </LinearLayout>






</RelativeLayout>