<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="520dp"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="8dp"
        android:background="@drawable/backgrounbutton"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="right"
            android:clickable="true"
            android:src="@drawable/close"
            tools:ignore="SpeakableTextPresentCheck" />


        <ImageView
            android:layout_width="250dp"
            android:layout_height="230dp"
            android:src="@drawable/sign_in"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="32dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/purple_500"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"

            android:background="@drawable/backgrounbutton"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtNumber"
                android:shadowRadius="@android:integer/config_mediumAnimTime"
                android:background="@drawable/backgrounbutton"
                android:hint="@string/edtNumber"

                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnContinue"
            android:layout_gravity="center"
            android:background="@drawable/backgrounbutton"
            android:clickable="true"/>



    </LinearLayout>



</RelativeLayout>